@@ -1,5 +1,6 @@
-local L = LibStub("AceLocale-3.0"):NewLocale("SimpleILevel", "ruRU", true)
+local L = LibStub("AceLocale-3.0"):NewLocale("SimpleILevel", "ruRU");
 
-if ( L ) then
+if not L then return end
+
 --@localization(locale="ruRU", format="lua_additive_table")@
-end
+
