@@ -1,5 +1,6 @@
-local L = LibStub("AceLocale-3.0"):NewLocale("SimpleILevel", "zhTW", true)
+local L = LibStub("AceLocale-3.0"):NewLocale("SimpleILevel", "zhTW");
 
-if ( L ) then
+if not L then return end
+
 --@localization(locale="zhTW", format="lua_additive_table")@
-end
+
